--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,15 +1,22 @@
-    <table class="table table-hover">
-        <tr>
-            <td width="70px">
+<table class="table table-hover">
+    <tr>
+        <td width="70px">
+            <a href="{{ url_for('main.user', username=post.author.username) }}">
+                <img src="{{ post.author.avatar(70) }}" alt='avatar'>
+            </a>
+        </td>
+        <td>
+        {% set user_link %}
+            <span class="user_popup">
                 <a href="{{ url_for('main.user', username=post.author.username) }}">
-                    <img src="{{ post.author.avatar(70) }}" alt='avatar'>
-                </a>
-            </td>
-            <td>
-                <a href="{{ url_for('main.user', username=post.author.username) }}">{{ post.author.username }}</a>
-                {{ _('said') }} {{ moment(post.timestamp).fromNow() }}:
-                <br>
-                {{ post.body }}
-            </td>
-        </tr>
-    </table>
+                   {{ post.author.username }}</a>
+            </span>
+        {% endset %}
+        {{ _('%(username)s said %(when)s',
+                        username=user_link, when=moment(post.timestamp).fromNow()) }}
+        <br>
+        <span id="post{{ post.id }}">{{ post.body }}</span>
+        <br>
+        </td>
+    </tr>
+</table>
