--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
       {% endif %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     {{ moment.include_moment() }}
     {{ moment.lang(g.locale) }}
 
@@ -19,20 +20,34 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle='collapse' data-bs-target="#Microblognavbar"  aria-controls="Microblognavbar" aria-expanded="false" aria-label="Toggle navigation">Menu</button>
                 <div class="collapse navbar-collapse" id="Microblognavbar">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                         {% if current_user.is_anonymous %}
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{ url_for('auth.login') }}">Login</a>
-                        </li>
+                        {% if current_user.is_anonymous %}
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page"
+                                   href="{{ url_for('auth.login') }}">Login</a>
+                            </li>
                         {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{ url_for('main.explore') }}">Explore</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{ url_for('main.user', username=current_user.username) }}">Your Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{ url_for('auth.logout') }}">Logout</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{{ url_for('main.explore') }}">Explore</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page"
+                                   href="{{ url_for('main.user', username=current_user.username) }}">Your Profile</a>
+                            </li>
+                            <li>
+                                <a class="nav-link active" aria-current="page"
+                                   href="{{ url_for('main.messages') }}">
+                                    {{ _('Messages') }}
+                                    {% set new_messages = current_user.new_messages() %}
+                                    <span id="messages_count" class="badge"
+                                          style="visibility: {% if new_messages %}visible
+                                          {% else %} hidden {% endif %};">
+                                        {{ new_messages }}
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{{ url_for('auth.logout') }}">Logout</a>
+                            </li>
                         {% endif %}
                     </ul>
                 {% if g.search_form %}
@@ -45,16 +60,104 @@
             </div>
         </nav>
         <hr>
-        {% block content %}
-        <div class="container-fluid">
-            {% with messages = get_flashed_messages() %}
+            <div class="container-fluid">
+            {% if current_user.is_authenticated %}
+            {% with tasks = current_user.get_tasks_in_progress() %}
+                {% if tasks %}
+                    {% for task in tasks %}
+                <div class="alert alert-success" role="alert">
+                    {{ task.description }}
+                    <span id="{{ task.id }}-progress">{{ task.get_progress() }}</span>
+                </div>
+                    {% endfor %}
+                {% endif %}
+                {% endwith %}
+                {% endif %}
+                {% with messages = get_flashed_messages() %}
                 {% if messages %}
                     {% for message in messages %}
                         <div class="alert alert-info" role="alert">{{ message }}</div>
                     {% endfor %}
                 {% endif %}
-            {% endwith %}
-        </div>
-        {% endblock %}
+                {% endwith %}
+            </div>
+{% block content %} {% endblock %}
+       <script>
+        $(document).ready(function () {
+            var timer = null;
+            var xhr = null;
+            $('.user_popup').hover(
+                function(event) {
+                    // mouse in event handler
+                    var elem = $(event.currentTarget);
+                    timer = setTimeout(function() {
+                        timer = null;
+                        xhr = $.ajax(
+                            '/user/' + elem.first().text().trim() + '/popup').done(
+                                function(data) {
+                                    xhr = null;
+                                    elem.popover({
+                                        trigger: 'manual',
+                                        html: true,
+                                        animation: false,
+                                        placement: 'right',
+                                        container: elem,
+                                        sanitize: false,
+                                        content: data
+                                    }).popover('show');
+                                    flask_moment_render_all();
+                                }
+                            );
+                    }, 1000);
+                },
+                function(event) {
+                    // mouse out event handler
+                    var elem = $(event.currentTarget);
+                    if (timer) {
+                        clearTimeout(timer);
+                        timer = null;
+                    }
+                    else if (xhr) {
+                        xhr.abort();
+                        xhr = null;
+                    }
+                    else {
+                        elem.popover('dispose');
+                    }
+                }
+            );
+        });
+        function set_message_count(n) {
+            $('#messages_count').text(n);
+            $('#messages_count').css('visibility', n ? 'visible' : 'hidden');
+        }
+        function set_task_progress(task_id, progress) {
+            $('#' + task_id + '-progress').text(progress);
+        }
+        {% if current_user.is_authenticated %}
+        $(function() {
+            var since = 0;
+            setInterval(function() {
+                $.ajax('{{  url_for('main.notifications') }}?since=' + since).done(
+                    function(notifications) {
+                        for (var i = 0; i < notifications.length; i++) {
+                            switch (notifications[i].name) {
+                                case'unread_message_count':
+                                    set_message_count(notifications[i].data);
+                                    break;
+                                case 'task_progress':
+                                    set_task_progress(
+                                        notifications[i].data.task_id,
+                                        notifications[i].data.progress);
+                                    break;
+                            }
+                            since = notifications[i].timestamp;
+                        }
+                    }
+                );
+            }, 10000);
+        });
+        {% endif %}
+    </script>
     </body>
 </html>
