--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Register</h1>
+        {% block css %}
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+    {% endblock %}
+    <div class="login-container">
+
+    <h1 id="log">MUSEME</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
@@ -13,7 +18,7 @@
         </p>
         <p>
             {{ form.email.label }}<br>
-            {{ form.email(size=64) }}<br>
+            {{ form.email(size=32) }}<br>
             {% for error in form.email.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
@@ -32,6 +37,7 @@
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p>{{ form.submit() }}</p>
+        <p>{{ form.submit(class_="button-29") }}</p>
     </form>
+    </div>
 {% endblock %}
