--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,145 +1,186 @@
 <!doctype html>
 <html>
-    <head>
-      {% if title %}
-      <title>{{ title }} - Microblog</title>
-      {% else %}
-      <title>Welcome to Microblog</title>
-      {% endif %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% if title %}
+        <title>{{ title }} - MuseMe</title>
+    {% else %}
+        <title>Welcome to MuseMe</title>
+    {% endif %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrapp.css') }}">
+
+<script src="https://unpkg.com/dropzone@6.0.0-beta.1/dist/dropzone-min.js"></script>
+<link href="https://unpkg.com/dropzone@6.0.0-beta.1/dist/dropzone.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="assets/vendor/OverlayScrollbars-master/css/OverlayScrollbars.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/vendor/tiny-slider/dist/tiny-slider.css">
+	<link rel="stylesheet" type="text/css" href="assets/vendor/choices.js/public/assets/styles/choices.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/vendor/glightbox-master/dist/css/glightbox.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/vendor/flatpickr/dist/flatpickr.css">
+	<link rel="stylesheet" type="text/css" href="assets/vendor/plyr/plyr.css">
+	<link rel="stylesheet" type="text/css" href="assets/vendor/zuck.js/dist/zuck.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;300;400&family=Bebas+Neue&display=swap" rel="stylesheet">
+    {% block css %}{% endblock %}
+
+
     {{ moment.include_moment() }}
     {{ moment.lang(g.locale) }}
 
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" type="button" href="{{ url_for('main.index') }}">Micoblog</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle='collapse' data-bs-target="#Microblognavbar"  aria-controls="Microblognavbar" aria-expanded="false" aria-label="Toggle navigation">Menu</button>
-                <div class="collapse navbar-collapse" id="Microblognavbar">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        {% if current_user.is_anonymous %}
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
-                                   href="{{ url_for('auth.login') }}">Login</a>
-                            </li>
-                        {% else %}
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{{ url_for('main.explore') }}">Explore</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
-                                   href="{{ url_for('main.user', username=current_user.username) }}">Your Profile</a>
-                            </li>
-                            <li>
-                                <a class="nav-link active" aria-current="page"
-                                   href="{{ url_for('main.messages') }}">
-                                    {{ _('Messages') }}
-                                    {% set new_messages = current_user.new_messages() %}
-                                    <span id="messages_count" class="badge"
-                                          style="visibility: {% if new_messages %}visible
-                                          {% else %} hidden {% endif %};">
+
+</head>
+<body>
+<nav class="navbar navbar-expand-md">
+    <div class="container-fluid">
+        <a class="navbar-brand" type="button" href="{{ url_for('main.index') }}">MuseMe</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle='collapse' data-bs-target="#Microblognavbar"
+                aria-controls="Microblognavbar" aria-expanded="false" aria-label="Toggle navigation">Menu
+        </button>
+        <div class="collapse navbar-collapse" id="Microblognavbar">
+        <ul class="navbar-nav mb-lg-0">
+            {% if current_user.is_anonymous %}
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page"
+                       href="{{ url_for('auth.login') }}">Login</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('main.explore') }}"><i class="bi bi-hash"></i> Explore</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page"
+                       href="{{ url_for('main.user', username=current_user.username) }}"><i class="bi bi-person-circle"></i>  Your Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page"
+                       href="{{ url_for('main.messages') }}"><i class="bi bi-envelope"></i>
+                        {{ _('Messages') }}
+                    </a>
+                </li>
+                <li>
+                    {% set new_messages = current_user.new_messages() %}
+                        <span id="messages_count" class="badge"
+                              style="visibility: {% if new_messages %}visible
+                              {% else %} hidden {% endif %};"><i class="bi bi-bell"></i>
                                         {{ new_messages }}
                                     </span>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{{ url_for('auth.logout') }}">Logout</a>
-                            </li>
-                        {% endif %}
-                    </ul>
+                </li>
+                </ul>
+            <ul class="navbar-nav mb-lg-0 ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('auth.logout') }}">Logout</a>
+                </li>
+            {% endif %}
+            <li class="nav-item">
                 {% if g.search_form %}
-                <form class="d-flex" role="search" method="get" action="{{ url_for('main.search') }}">
-                    <div class="form-group">
-                        {{ g.search_form.q }}
-                </form>
+                    <form class="d-flex s-form" role="search" method="get" action="{{ url_for('main.search') }}" >
+                        <div class="form-group">
+                            {{ g.search_form.q(placeholder="Search...") }}
+                            <button type="submit" class="search-btn">
+                                <i class="bi bi-search"></i>
+                            </button>
+
+                        </div>
+                    </form>
+            </li>
+            </ul>
+        </div>
+        {% endif %}
+</nav>
+
+<div class="container-fluid">
+    {% if current_user.is_authenticated %}
+        {% with tasks = current_user.get_tasks_in_progress() %}
+            {% if tasks %}
+                {% for task in tasks %}
+                    <div class="alert alert-warning" role="alert">
+                        {{ task.description }}
+                        <span id="{{ task.id }}-progress">{{ task.get_progress() }}</span>
                     </div>
-                {% endif %}
-            </div>
-        </nav>
-        <hr>
-            <div class="container-fluid">
-            {% if current_user.is_authenticated %}
-            {% with tasks = current_user.get_tasks_in_progress() %}
-                {% if tasks %}
-                    {% for task in tasks %}
-                <div class="alert alert-success" role="alert">
-                    {{ task.description }}
-                    <span id="{{ task.id }}-progress">{{ task.get_progress() }}</span>
-                </div>
-                    {% endfor %}
-                {% endif %}
-                {% endwith %}
-                {% endif %}
-                {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                    {% for message in messages %}
-                        <div class="alert alert-info" role="alert">{{ message }}</div>
-                    {% endfor %}
-                {% endif %}
-                {% endwith %}
-            </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    {% endif %}
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-primary" role="alert">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+</div>
 {% block content %} {% endblock %}
-       <script>
-        $(document).ready(function () {
-            var timer = null;
-            var xhr = null;
-            $('.user_popup').hover(
-                function(event) {
-                    // mouse in event handler
-                    var elem = $(event.currentTarget);
-                    timer = setTimeout(function() {
-                        timer = null;
-                        xhr = $.ajax(
-                            '/user/' + elem.first().text().trim() + '/popup').done(
-                                function(data) {
-                                    xhr = null;
-                                    elem.popover({
-                                        trigger: 'manual',
-                                        html: true,
-                                        animation: false,
-                                        placement: 'right',
-                                        container: elem,
-                                        sanitize: false,
-                                        content: data
-                                    }).popover('show');
-                                    flask_moment_render_all();
-                                }
-                            );
-                    }, 1000);
-                },
-                function(event) {
-                    // mouse out event handler
-                    var elem = $(event.currentTarget);
-                    if (timer) {
-                        clearTimeout(timer);
-                        timer = null;
-                    }
-                    else if (xhr) {
-                        xhr.abort();
-                        xhr = null;
-                    }
-                    else {
-                        elem.popover('dispose');
-                    }
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+<script>
+    $(document).ready(function () {
+        var timer = null;
+        var xhr = null;
+        $('.user_popup').hover(
+            function (event) {
+                // mouse in event handler
+                var elem = $(event.currentTarget);
+                timer = setTimeout(function () {
+                    timer = null;
+                    xhr = $.ajax(
+                        '/user/' + elem.first().text().trim() + '/popup').done(
+                        function (data) {
+                            xhr = null;
+                            elem.popover({
+                                trigger: 'manual',
+                                html: true,
+                                animation: false,
+                                placement: 'right',
+                                container: elem,
+                                sanitize: false,
+                                content: data
+                            }).popover('show');
+                            flask_moment_render_all();
+                        }
+                    );
+                }, 1000);
+            },
+            function (event) {
+                // mouse out event handler
+                var elem = $(event.currentTarget);
+                if (timer) {
+                    clearTimeout(timer);
+                    timer = null;
+                } else if (xhr) {
+                    xhr.abort();
+                    xhr = null;
+                } else {
+                    elem.popover('dispose');
                 }
-            );
-        });
-        function set_message_count(n) {
-            $('#messages_count').text(n);
-            $('#messages_count').css('visibility', n ? 'visible' : 'hidden');
-        }
-        function set_task_progress(task_id, progress) {
-            $('#' + task_id + '-progress').text(progress);
-        }
-        {% if current_user.is_authenticated %}
-        $(function() {
+            }
+        );
+    });
+
+    function set_message_count(n) {
+        $('#messages_count').text(n);
+        $('#messages_count').css('visibility', n ? 'visible' : 'hidden');
+    }
+
+    function set_task_progress(task_id, progress) {
+        $('#' + task_id + '-progress').text(progress);
+    }
+    {% if current_user.is_authenticated %}
+        $(function () {
             var since = 0;
-            setInterval(function() {
+            setInterval(function () {
                 $.ajax('{{  url_for('main.notifications') }}?since=' + since).done(
-                    function(notifications) {
+                    function (notifications) {
                         for (var i = 0; i < notifications.length; i++) {
                             switch (notifications[i].name) {
                                 case'unread_message_count':
@@ -157,7 +198,7 @@
                 );
             }, 10000);
         });
-        {% endif %}
-    </script>
-    </body>
+    {% endif %}
+</script>
+</body>
 </html>
