--- a/app/templates/email/export_posts.html
+++ b/app/templates/email/export_posts.html
@@ -1,4 +1,5 @@
 <p>Dear {{ user.username }},</p>
+<p> Thank you for participating in testing of my website!</p>
 <p>Please find attached the archive of your posts that you requested.</p>
 <p>Sincerely,</p>
-<p>The Microblog Team</p>
+<p>The Muse me Team</p>
