--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,109 +1,79 @@
-body {
-    background-image: url('../images/city_back.png');
-    background-size: 1920px 1080px;
-    background-position: center top;
-    background-color: rgba(0, 0, 0);
-    color: white;
+/*main {*/
+/*    background-image: url('../images/city_back.png');*/
+/*    background-size: 1920px 1080px;*/
+/*    background-position: center top;*/
+/*    background-color: rgba(0, 0, 0);*/
+/*    color: white;*/
+/*}*/
+.non-wide {
+  max-width: 400px;
+  max-height: 200px;
 }
 
-.navbar {
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
+.like-container {
+  position: relative;
+  display: inline-block;
 }
 
-.navbar-nav > li {
-    margin: 5px 20px 5px 5px;
-    font-size: 17px;
+.like-btn {
+  display: inline-block;
+  padding: 6px 12px;
+  border-radius: 20px;
+  color: #444;
+  text-decoration: none;
 }
 
-.navbar-nav .nav-link {
-  background-color: #332b45; /* Set the background color of the links to gray */
-  color: #fff; /* Set the text color of the links to white */
-  border: none; /* Remove the default border */
-  border-radius: 15px; /* Add some border radius to make the links rounded */
-  transition: all 0.3s ease; /* Add a smooth transition to all properties */
+.emoji-container {
+  position: absolute;
+  top: -50px;
+  left: 0;
+  width: 160px;
+  display: none;
+  padding: 8px;
+  background-color: #fff;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+  border-radius: 6px;
+  z-index: 1;
 }
 
-.navbar-nav .nav-link:hover,
-.navbar-nav .nav-link:focus {
-  background-color: #171420; /* Change the background color of the links on hover or focus */
-  color: yellow; /* Change the text color of the links on hover or focus */
-  text-decoration: none; /* Remove the default underline on hover or focus */
-  outline: none; /* Remove the default outline on focus */
-}
-h1, h2 {
-    font-family: 'Montserrat', sans-serif;
-    color: yellow;
-    margin-bottom: 30px;
+.emoji-container a {
+  margin-right: 8px;
+  font-size: 18px;
+    flex-direction: row;
+  justify-content: space-around;
+  display: flex;
+
 }
 
 
-.navbar-brand {
-    color: yellow;
-    font-family: 'Lato-Bold', sans-serif;
-    font-size: 25px;
-}
 
-.navbar-brand:hover {
-    color: #9241d7;
-}
-.navbar-nav {
-    color: white;
-    --bs-navbar-active-color: white;
-}
-.s-form {
-    color: #9059ef;
-    display: flex;
-    padding: 1px;
-    border: 2px solid black;
-    border-radius: 20px;
-    background-color: #332b45;
+/*.navbar-nav .nav-link {*/
+/*  background-color: #332b45; !* Set the background color of the links to gray *!*/
+/*  color: #fff; !* Set the text color of the links to white *!*/
+/*  border: none; !* Remove the default border *!*/
+/*  border-radius: 15px; !* Add some border radius to make the links rounded *!*/
+/*  transition: all 0.3s ease; !* Add a smooth transition to all properties *!*/
+/*}*/
 
-}
-#q {
-    margin-top: 5px;
-    margin-left: 10px;
-    height: 35px;
-    outline: none;
-    background: #332b45;
-    font-size: 15px;
-    border: 1px solid transparent;
-    text-align: left;
-    border-radius: 30px;
-    color: white;
+/*.navbar-nav .nav-link:hover,*/
+/*.navbar-nav .nav-link:focus {*/
+/*  background-color: #171420; !* Change the background color of the links on hover or focus *!*/
+/*  color: yellow; !* Change the text color of the links on hover or focus *!*/
+/*  text-decoration: none; !* Remove the default underline on hover or focus *!*/
+/*  outline: none; !* Remove the default outline on focus *!*/
+/*}*/
+/*h1, h2 {*/
+/*    font-family: 'Montserrat', sans-serif;*/
+/*    color: yellow;*/
+/*    margin-bottom: 30px;*/
+/*}*/
 
-}
-.s-form:focus-within{
-    border-color: yellow;
-    box-shadow: 0 0 3px 0 yellow;
-    outline: none;
-}
-#q::placeholder {
-  color: #c8b4b4;
-}
 
-.search-btn {
-    width: 40px;
-    padding: 0;
-    margin: 0;
-    border: 1px solid transparent;
-    border-radius: 5px;
-    background: transparent;
-    cursor: pointer;
-    opacity: 0.7;
-}
 
-.bi-search {
-    color: white;
-}
-.s-form:focus-within .bi-search{
-  color: yellow;
-}
-
-input:-webkit-autofill,
-    input:-webkit-autofill:focus {
-    transition: background-color 600000s 0s, color 600000s 0s;
-}
+/*input:-webkit-autofill,*/
+/*    input:-webkit-autofill:focus {*/
+/*    transition: background-color 600000s 0s, color 600000s 0s;*/
+/*}*/
 
 #hello {
     justify-content: center;
@@ -157,65 +127,83 @@ input:-webkit-autofill,
   transform: translateY(2px);
 }
 
-td {
-    color: white;
-    border: none;
-}
-td:hover {
-    color: yellow;
-}
-.container {
-    background-color: #332b45;
-}
-.hash {
-    margin-top: 60px;
-    border-radius: 20px;
-    padding: 30px 30px 0 50px;
-    max-height: 80vh;
-}
-td{
-    margin: 20px;
-    padding: 15px 30px 0 11px;
-}
-.messages {
-    margin-left: 0;
-    margin-top: 10vw;
-    padding-left: 30px;
-    max-height: 60vh;
-    overflow: auto;
-    border-radius: 20px;
-}
-.posts {
-    border: 2px solid black;
-    padding-top: 30px;
-}
-#post {
-    background-color: black;
-    color: white;
-}
+/*td {*/
+/*    color: white;*/
+/*    border: none;*/
+/*}*/
+/*td:hover {*/
+/*    color: yellow;*/
+/*}*/
+/*.container {*/
+/*    background-color: #332b45;*/
+/*}*/
+/*.hash {*/
+/*    margin-top: 60px;*/
+/*    border-radius: 20px;*/
+/*    padding: 30px 30px 0 50px;*/
+/*    max-height: 80vh;*/
+/*}*/
+/*td{*/
+/*    margin: 20px;*/
+/*    padding: 15px 30px 0 11px;*/
+/*}*/
+/*.messages {*/
+/*    margin-left: 0;*/
+/*    margin-top: 10vw;*/
+/*    padding-left: 30px;*/
+/*    max-height: 60vh;*/
+/*    overflow: auto;*/
+/*    border-radius: 20px;*/
+/*}*/
+/*.posts {*/
+/*    border: 2px solid black;*/
+/*    padding-top: 30px;*/
+/*}*/
+/*#post {*/
+/*    background-color: black;*/
+/*    color: white;*/
+/*}*/
 
-li.disabled {
-  background-color: red;
-}
+/*li.disabled {*/
+/*  background-color: red;*/
+/*}*/
 
-.card {
-    background-color: #141519;
-    margin-bottom: 10px;
-}
+/*.card {*/
+/*    background-color: #141519;*/
+/*    margin-bottom: 10px;*/
+/*}*/
 
-.small {
-    color: white;
-    margin-left: 15px;
-}
-.card-header {
-    margin-top: 15px;
-}
+/*.small {*/
+/*    color: white;*/
+/*    margin-left: 15px;*/
+/*}*/
+/*.card-header {*/
+/*    margin-top: 15px;*/
+/*}*/
 
 .card-img {
     max-width: 450px;
     max-height: 4500px;
 }
 
-.modal-content img {
-    max-width: 100%;
-}
+/*.modal-content img {*/
+/*    max-width: 100%;*/
+/*}*/
+
+    .image-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(150px, 300px));
+        grid-gap: 10px;
+        grid-auto-rows: 200px;
+    }
+
+    .image-wrapper {
+        position: relative;
+        overflow: hidden;
+    }
+
+    .image-wrapper img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+    }
