--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,9 +1,7 @@
-{% extends "base.html" %}
+{% extends "auth/base_login.html" %}
 
 {% block content %}
-        {% block css %}
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
-    {% endblock %}
+
     <div class="login-container">
 
     <h1 id="log">MUSEME</h1>
