--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'auth/base_login.html' %}
 {% block content %}
     <h1>Rest Password</h1>
     <form method="post" action="">
