--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -1,23 +1,227 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Edit Profile</h1>
-    <form action="{{ url_for('main.edit_profile') }}" method="post">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.about_me.label }}<br>
-            {{ form.about_me(cols=50, rows=4) }}<br>
-            {% for error in form.about_me.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
-    </form>
+    <div class="container">
+        <div class="row">
+            <div class="col lg-3">
+                <div class="offcanvas-body d-block px-2 px-lg-0">
+                    <!-- Card START -->
+                    <div class="card overflow-hidden">
+                        <!-- Cover image -->
+                        <div class="h-50px"
+                             style="background-image: url('{{ url_for('static', filename='images/blog_main.png') }}'); background-position: center; background-size: cover; background-repeat: no-repeat;"></div>
+                        <!-- Card body START -->
+                        <div class="card-body pt-0">
+                            <div class="text-center">
+                                <!-- Avatar -->
+                                <div class="/ avatar-lg mt-n5 mb-3">
+                                    <a href="{{ url_for('main.user', username=current_user.username) }}"><img
+                                            class="avatar-img rounded border border-white border-3"
+                                            src="{{ url_for('static', filename='uploads/' + current_user.avatar) if current_user.avatar else current_user.avatar_alt(70) }}"
+                                            alt="avatar"></a>
+                                </div>
+                                <!-- Info -->
+                                <h5 class="mb-0"><a
+                                        href="{{ url_for('main.user', username=current_user.username) }}">{{ current_user.username }} </a>
+                                </h5>
+                                {% if current_user.about_me is not none %}
+                                    <p class="mt-3">{{ current_user.about_me }}</p>
+                                {% endif %}
+
+                                <!-- User stat START -->
+                                <div class="hstack gap-2 gap-xl-3 justify-content-center">
+                                    <!-- User stat item -->
+                                    <div>
+                                        <h6 class="mb-0">{{ current_user.posts.count() }}</h6>
+                                        <small>Post</small>
+                                    </div>
+                                    <!-- Divider -->
+                                    <div class="vr"></div>
+                                    <!-- User stat item -->
+                                    <div>
+                                        <h6 class="mb-0">{{ current_user.followers.count() }}</h6>
+                                        <small>Followers</small>
+                                    </div>
+                                    <!-- Divider -->
+                                    <div class="vr"></div>
+                                    <!-- User stat item -->
+                                    <div>
+                                        <h6 class="mb-0">{{ current_user.followed.count() }}</h6>
+                                        <small>Following</small>
+                                    </div>
+                                </div>
+                                <!-- User stat END -->
+                            </div>
+
+                            <!-- Divider -->
+                            <hr>
+
+                            <!-- Side Nav START -->
+                            <ul class="nav nav-link-secondary flex-column fw-bold gap-2">
+                                <li class="nav-item">
+                                    <a class="nav-link"
+                                       href="{{ url_for('main.user', username=current_user.username) }}">
+                                        <i
+                                                class="bi bi-person-circle" alt=""></i><span> Feed </span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ url_for('main.explore') }}"><i class="bi bi-hash"
+                                                                                                alt=""></i><span>  Explore </span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ url_for('main.messages') }}"><i class="bi bi-envelope"
+                                                                                                 alt=""></i><span>  Messages</span></a>
+                                </li>
+                                {% set new_messages = current_user.new_messages() %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ url_for('main.messages') }}"> <i class="bi bi-bell"
+                                                                                                  alt=""></i><span>  Notifications:
+                                        {% if new_messages %}
+                                            {{ new_messages }}
+                                        {% else %} 0 {% endif %}</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ url_for('auth.logout') }}"> <i
+                                            class="bi bi-box-arrow-left"
+                                            alt=""></i><span>  Log Out </span></a>
+                                </li>
+                            </ul>
+                            <!-- Side Nav END -->
+                        </div>
+                        <!-- Card body END -->
+                        <!-- Card footer -->
+                        <div class="card-footer text-center py-2">
+                            <a class="btn btn-link btn-sm"
+                               href="{{ url_for('main.user', username=current_user.username) }}">View
+                                Profile </a>
+                        </div>
+                    </div>
+                    <!-- Card END -->
+                    <!-- Copyright -->
+                    <p class="small text-center mt-1">©2023 <a class="text-body" target="_blank"
+                                                               href="https://www.linkedin.com/in/yury-ash-a74058253/">
+                        LinkedInYury </a></p>
+                </div>
+            </div>
+            <!-- Sidenav END -->
+
+            <!-- Main content START -->
+            <div class="col-lg-6 vstack gap-4">
+                <!-- Setting Tab content START -->
+                <div class="tab-content py-0 mb-0">
+                    <!-- Account setting tab START -->
+                    <div class="tab-pane show active fade" id="nav-setting-tab-1" role="tabpanel">
+                        <!-- Account settings START -->
+                        <div class="card mb-4">
+
+                            <!-- Title START -->
+                            <div class="card-header border-0 pb-0">
+                                <h1 class="h5 card-title">Account Settings</h1>
+                            </div>
+                            <!-- Card body START -->
+                            <div class="card-body">
+                                <form class="row g-3" action="{{ url_for('main.edit_profile') }}" method="post"
+                                      enctype="multipart/form-data">
+                                    {{ form.hidden_tag() }}
+                                    <!-- First name -->
+                                    <div class="col-sm-6 col-lg-4">
+                                        <label class="form-label">First name</label>
+                                        {{ form.first_name(size=32, class="form-control") }}<br>
+                                        {% for error in form.first_name.errors %}
+                                            <span style="color: red;">[{{ error }}]</span>
+                                        {% endfor %}
+                                    </div>
+                                    <!-- Last name -->
+                                    <div class="col-sm-6 col-lg-4">
+                                        <label class="form-label">Last name</label>
+                                        {{ form.last_name(size=32, class="form-control") }}<br>
+                                        {% for error in form.last_name.errors %}
+                                            <span style="color: red;">[{{ error }}]</span>
+                                        {% endfor %}
+                                    </div>
+                                    <!-- User name -->
+                                    <div class="col-sm-8">
+                                        <label class="form-label">User name</label>
+                                        {{ form.username(size=32, class="form-control") }}<br>
+                                        {% for error in form.username.errors %}
+                                            <span style="color: red;">[{{ error }}]</span>
+                                        {% endfor %}
+                                        <!-- Page information -->
+                                        <div class="col-12">
+                                            <label class="form-label">About me</label>
+                                            {{ form.about_me(rows=4, class="form-control") }}<br>
+                                            <small>Character limit: 300</small>
+                                        </div>
+                                        <br>
+                                        <div class="col-sm-8">
+                                            <label class="form-label">Upload avatar</label>
+                                            {{ form.avatar(class="form-control") }}<br>
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <label class="form-label">Upload background image</label>
+                                            {{ form.background_image(class="form-control") }}<br>
+                                        </div>
+                                        <!-- Button  -->
+                                        <div class="col-12 text-end">
+                                            {{ form.submit(class="btn btn-sm btn-primary mb-0", value='Save changes') }}
+                                        </div>
+                                    </div>
+                                </form>
+                                <!-- Settings END -->
+                            </div>
+                            <!-- Card body END -->
+                        </div>
+                        <!-- Change your password START -->
+                        <div class="card">
+                            <!-- Title START -->
+                            <div class="card-header border-0 pb-0">
+                                <h5 class="card-title">Change your password</h5>
+                            </div>
+                            <!-- Title START -->
+                            <div class="card-body">
+                                <!-- Settings START -->
+                                <form class="row g-3" action="{{ url_for('auth.password_reset') }}" method="post">
+                                    {{ password_form.hidden_tag() }}
+                                    <!-- Current password -->
+                                    <div class="col-12">
+                                        {{ password_form.current_password.label(class="form-label") }}
+                                        {{ password_form.current_password(class="form-control") }}
+                                    </div>
+                                    <!-- New password -->
+                                    <div class="col-12">
+                                        {{ password_form.password.label(class="form-label") }}
+                                        <!-- Input group -->
+                                        <div class="input-group">
+                                            {{ password_form.password(class="form-control fakepassword", id="psw-input") }}
+                                            <span class="input-group-text p-0">
+                          <i class="bi bi-eye-slash cursor-pointer p-2 w-40px"></i>
+                        </span>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        {{ password_form.password2.label(class="form-label") }}
+                                        {{ password_form.password2(class="form-control ") }}
+                                    </div>
+                                    <div class="col-12 text-end">
+                                        {{ password_form.submit(class="btn btn-primary mb-0") }}
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+const togglePassword = document.querySelector('.bi-eye-slash');
+const password = document.querySelector('.fakepassword');
+togglePassword.addEventListener('click', function (e) {
+    // toggle the type attribute
+    const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+    password.setAttribute('type', type);
+    // toggle the eye / eye slash icon
+    this.classList.toggle('bi-eye');
+});
+    </script>
 {% endblock %}
