--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -4,6 +4,8 @@
     <h1>{{ _('Search Results') }}</h1>
     {% for post in posts %}
         {% include '_post.html' %}
+        </div>
+        </div>
     {% endfor %}
     <nav aria-label="Page navigation">
         <ul class="pagination">
