--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,56 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'sub_main.html' %}
 
-{% block content %}
-    <table>
-        <tr class='profile'>
-            <td><img src="{{ user.avatar(128) }} alt='avatar.jpg'"></td>
-            <td><h1>{{ _('User') }}: {{ user.username }}</h1>
-                {% if user.about_me %}<p>{{  user.about_me }}</p>{% endif %}
-                {% if user.last_seen %}<p>{{ _('Last seen on')}}: {{ moment(user.last_seen).format('LLL') }}</p>{% endif %}
-                <p>{{ _('%(count)d followers', count=user.followers.count()) }},
-                    {{ _('%(count)d following', count=user.followed.count()) }}</p>
-                    {% if user == current_user %}
-                <p><a href="{{ url_for('main.edit_profile') }}">{{ _('Edit your profile')}}</a></p>
-                   {% if not current_user.get_task_in_progress('export_posts') %}
-                <p><a href="{{ url_for('main.export_posts') }}">
-                        {{ _('Export your posts') }}
-                </a></p>
-                    {% endif %}
-                {% elif not current_user.is_following(user) %}
-                        <p>
-                        <form action="{{ url_for('main.follow', username=user.username) }}" method="post">
-                            {{ form.hidden_tag() }}
-                            {{ form.submit(value=_('Follow'), class_='btn btn-primary') }}
-                        </form>
-                        </p>
-                {% else %}
-                  <p>
-                  <form action="{{ url_for('main.unfollow', username=user.username) }}" method="post">
-                  {{ form.hidden_tag() }}
-                  {{ form.submit(value=_('Unfollow'), class_='btn btn-primary') }}
-                  </form>
-                  </p>
-                        {% endif %}
-            {% if user != current_user %}
-                  <p>
-                      <a href="{{ url_for('main.send_message', recipient=user.username) }}">
-                          {{ _('Send private message') }}
-                      </a>
-                  </p>
-                {% endif %}
-            </td>
-        </tr>
-    </table>
-    <hr>
-    {% for post in posts %}
-        {% include '_post.html' %}
-    {% endfor %}
-    {% if prev_url %}
-    <a href="{{ prev_url}}">{{ _('Newer posts')}}</a>
+{% block tab %}
+    {% if user == current_user and comment_form%}
+    {% include 'dropzone.html' %}
     {% endif %}
-    {% if next_url %}
-    <a href="{{ next_url }}">{{ _('Older posts')}}</a>
-    {% endif %}
-
+     <h2>Latest shares:</h2>
+    {% include '_post.html' %}
 
 {% endblock %}
