--- a/app/templates/who_to_follow.html
+++ b/app/templates/who_to_follow.html
@@ -1,74 +1,91 @@
-<div class="col-lg-3">
-				<div class="row g-4">
-					<!-- Card follow START -->
-					<div class="col-sm-6 col-lg-12">
-						<div class="card">
-							<!-- Card header START -->
-							<div class="card-header pb-0 border-0">
-								<h5 class="card-title mb-0">Who to follow</h5>
-							</div>
-							<!-- Card header END -->
-							<!-- Card body START -->
-							<div class="card-body">
-								<!-- Connection item START -->
-                                {% for people in popular_people %}
-								<div class="hstack gap-2 mb-3">
-									<!-- Avatar -->
-									<div class="avatar">
-										<a href="#!"><img class="avatar-img rounded-circle" src="assets/images/avatar/04.jpg" alt=""></a>
-									</div>
-									<!-- Title -->
-									<div class="overflow-hidden">
-										<a class="h6 mb-0" href="#!">Judy Nguyen </a>
-										<p class="mb-0 small text-truncate">News anchor</p>
-									</div>
-									<!-- Button -->
-									<a class="btn btn-primary-soft rounded-circle icon-md ms-auto" href="#"><i class="fa-solid fa-plus"> </i></a>
-								</div>
-								<!-- Connection item END -->
-                                {% endfor %}
+<!-- Card follow START -->
+<div class="col-sm-6 col-lg-12">
+    <div class="card">
+        <!-- Card header START -->
+              <div class="card-header d-sm-flex justify-content-between align-items-center border-0">
+                <h5 class="card-title">You may be interested <span class="badge bg-danger bg-opacity-10 text-danger"></span></h5>
+                <a class="btn btn-primary-soft btn-sm" href="{{ url_for('main.explore') }}"> See more</a>
+              </div>
+        <!-- Card header END -->
+        <!-- Card body START -->
+                      <div class="card-body position-relative pt-0">
+                <div class="row g-3">
+            <!-- Connection item START -->
+            {% for people in popular_people %}
+                    <div class="col-6">
+                    <!-- Friends item START -->
+                    <div class="card shadow-none text-center h-100">
+                      <!-- Card body -->
+                      <div class="card-body p-2 pb-0">
+                        <div class="avatar avatar-story avatar-xl">
+                        <a href="{{ url_for('main.user', username=people.username) }}">
+                            <img class="avatar-img rounded-circle border-white border-3" src="{{ url_for('static', filename='uploads/' + people.avatar) if people.avatar else people.avatar_alt(70) }}" alt="avatar">
 
+                        </a>
+                    </div>
+                          <h6 class="card-title mb-1 mt-3"> <a href="{{ url_for('main.user', username=people.username) }}"> {{ people.username }} </a></h6>
+                        <p class="mb-0 small lh-sm">People already following: {{ people.followers.count() }}</p>
+                      </div>
+                    <!-- Title -->
+                        <div class="card-footer p-3 border-0 d-flex align-items-center mx-3">
+                            <form action="{{ url_for('main.follow', username=people.username) }}" class="me-3" method="POST">
+                                {{ form.hidden_tag() }}
+                                <button class="btn btn-sm btn-success"><i class="bi bi-plus-lg"></i></button>
+                            </form>
+                            <a href="{{ url_for('main.messages', user=people.id) }}">
+                                <button class="btn btn-sm btn-info"><i class="bi bi-chat-left-text"></i></button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Connection item END -->
+            {% endfor %}
+                </div></div>
+        </div>
+        <!-- Card body END -->
+    </div>
+<!-- Card follow START -->
 
-								<!-- View more button -->
-								<div class="d-grid mt-3">
-									<a class="btn btn-sm btn-primary-soft" href="#!">View more</a>
-								</div>
-							</div>
-							<!-- Card body END -->
-						</div>
-					</div>
-					<!-- Card follow START -->
+<!-- Card News START -->
+<div class="col-sm-6 col-lg-12">
+    <div class="card">
+        <!-- Card header START -->
+        <div class="card-header pb-0 border-0">
+            <h5 class="card-title mb-0">Hot Today</h5>
+        </div>
+        <!-- Card header END -->
+        <!-- Card body START -->
+        <div class="card-body">
+            {% for hashtag in hashtag_counts %}
+                <!-- News item -->
+                <div class="mb-3">
+                    <h6 class="mb-0"><a href="#!" onclick="searchHash('{{ hashtag[0] }}')">{{ hashtag[0] }}</a></h6>
+                    <p class="mb-0 small">Popularity: {{ hashtag[1] }}</p>
 
-					<!-- Card News START -->
-					<div class="col-sm-6 col-lg-12">
-						<div class="card">
-							<!-- Card header START -->
-							<div class="card-header pb-0 border-0">
-								<h5 class="card-title mb-0">Today’s news</h5>
-							</div>
-							<!-- Card header END -->
-							<!-- Card body START -->
-							<div class="card-body">
-                                {% for hashtag in hashtag_counts %}
-								<!-- News item -->
-								<div class="mb-3">
-									<h6 class="mb-0"><a href="blog-details.html">Ten questions you should answer truthfully</a></h6>
-									<small>2hr</small>
-								</div>
-								{% endfor %}
-								<!-- Load more comments -->
-								<a href="#!" role="button" class="btn btn-link btn-link-loader btn-sm text-secondary d-flex align-items-center" data-bs-toggle="button" aria-pressed="true">
-									<div class="spinner-dots me-2">
-										<span class="spinner-dot"></span>
-										<span class="spinner-dot"></span>
-										<span class="spinner-dot"></span>
-									</div>
-									View all latest news
-								</a>
-							</div>
-							<!-- Card body END -->
-						</div>
-					</div>
-					<!-- Card News END -->
-				</div>
-			</div>
+                </div>
+            {% endfor %}
+            <!-- Load more comments -->
+            <a href="{{ url_for('main.explore') }}"
+               class="btn btn-link btn-link-loader btn-sm text-secondary d-flex align-items-center"
+               >
+                <div class="spinner-dots me-2">
+                    <span class="spinner-dot"></span>
+                    <span class="spinner-dot"></span>
+                    <span class="spinner-dot"></span>
+                </div>
+                View all latest news
+            </a>
+        </div>
+        <!-- Card body END -->
+    </div>
+</div>
+<!-- Card News END -->
+
+<script>
+    function searchHash(hashtag) {
+        const searchForm = document.getElementById("search-form");
+        const searchInput = document.getElementById('q');
+        searchInput.value = hashtag;
+        searchForm.submit();
+    }
+</script>
